added: create store entity
