# internal/dto/store.go
@@ -10,3 +10,15 @@ type StoreCreateReq struct {
 	CityID      int     `json:"city_id"`
 	ManagerID   int     `json:"manager_id"`
 }
+
+type StoreRes struct {
+	ID          int     `json:"id"`
+	Name        string  `json:"name"`
+	Logo        string  `json:"logo"`
+	Slug        string  `json:"slug"`
+	Latitude    float64 `json:"latitude"`
+	Longitude   float64 `json:"longitude"`
+	StoreTypeID int     `json:"store_type_id"`
+	CityID      int     `json:"city_id"`
+	ManagerID   int     `json:"manager_id"`
+}
